Mesh analysis is shaded incorrectly in the viewport if some amount of x-ray is also used #65225

Closed
opened 2019-05-28 09:43:20 +02:00 by Jesse Yurkovich · 2 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070 With Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.58

Blender Version
Broken: version: 2.80 (sub 72), branch: master, commit date: 2019-05-25 13:41, hash: e1d1899e72
Worked: (optional)

Short description of error
Mesh analysis with some form of transparency overlay (like x-ray) will result in improper shading of the mesh. The "solid" view works correctly.

Exact steps for others to reproduce the error
meshanalysis-withxray.blend

  • Load attached .blend
  • Toggle x-ray on/off to see the effect
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070 With Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.58 **Blender Version** Broken: version: 2.80 (sub 72), branch: master, commit date: 2019-05-25 13:41, hash: `e1d1899e72` Worked: (optional) **Short description of error** Mesh analysis with some form of transparency overlay (like x-ray) will result in improper shading of the mesh. The "solid" view works correctly. **Exact steps for others to reproduce the error** [meshanalysis-withxray.blend](https://archive.blender.org/developer/F7074148/meshanalysis-withxray.blend) - Load attached .blend - Toggle x-ray on/off to see the effect
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin
Jeroen Bakker was assigned by Jesse Yurkovich 2019-05-28 09:45:34 +02:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65225
No description provided.